<resources>
    <string name="app_name">Dog Breed</string>
    <string name="buddy">buddy</string>
    <string name="hi_pal">Hey there!</string>
    <string name="new_family">are you ready to find a new buddy?</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="woof">Find Me ></string>
    <string name="unable_to_fetch_list">Unable to fetch DogList</string>
    <string name="feed_over"> You are done!</string>
    <string name="click"> Click</string>
    <string name="breed_name">Breed Name: %s</string>
    <string name="sub_breed_name">Sub Breed Name: %s</string>
    <string name="detail">Detail</string>


</resources>
